<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/day_view"
        android:title="@string/daily"
        android:icon="@drawable/ic_day"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:visible="false"
        />
    <item android:id="@+id/week_view"
        android:title="@string/weekly"
        android:icon="@drawable/ic_week"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/month_view"
        android:title="@string/monthly"
        android:icon="@drawable/ic_month"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        />

</menu>