<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ MIT License
  ~
  ~ Copyright (c) 2021 Felix Biego
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_item_kill"
        android:title="@string/stop_service"
        android:contentDescription="@string/stop_service"
        android:icon="@drawable/ic_off"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/menu_item_start"
        android:title="@string/start_service"
        android:contentDescription="@string/start_service"
        android:icon="@drawable/ic_start"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:visible="false"
        />
    <item android:id="@+id/menu_item_prefs"
        android:title="@string/settings"
        android:contentDescription="@string/settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        />

</menu>